general fix on font-weight, spacing  and semantic tags

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ main {
 }
 #sidebar .icon {
     width: 35px;
-    margin-left: 10px;
 }
 #sidebar a {
     color: var(--color-text);
@@ -98,6 +97,7 @@ main {
 }
 #main-content .card {
     margin: 20px 0;
+    font-size: 0.9em;
 }
 
 
